# homework_23.2

./: .env.sample  .gitignore  README.md  data_article.json  data_catalog.json  data_group.json  pyproject.toml
article/: admin.py  forms.py  models.py  urls.py  views.py
article/migrations/: 0001_initial.py
article/templates/article/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  index.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/data/: catalog_data.json  data.json
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_updated_at.py  0003_version.py  0004_alter_version_product.py  0005_product_owner.py  0006_alter_product_options_product_is_active.py
catalog/templates/catalog/: contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_footer.html  inc_menu.html
catalog/utils/: add_data.py
config/: settings.py  urls.py
static/js/: color-modes.js
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_token_alter_user_avatar_and_more.py
users/templates/users/: login.html  register.html  reset_password.html  user_form.html
